added task service

--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 html {
   min-height: 100%;
+  font-family: 'Raleway', sans-serif;
 }
-
+#listwrapper{
+  background: #F3F9FF;
+  padding: 2em;
+}
 body {
-  background-color: #F3F9FF;
-  font-family: Lora;
+  background: #fff;
+
 }
 
 h1 {
@@ -15,7 +19,7 @@ h1 {
 h2 {
   margin: 0;
   padding: 20px;
-  background-color: rgba(255, 255, 255, .4);
+  background-color: rgba(255, 255, 255, .5);
   font-size: 1.8em;
   text-align: center;
 }
@@ -25,7 +29,7 @@ ul, li {
 }
 
 li {
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, .4);
   padding: 1rem 2rem 0.5rem 2rem;
   margin-top: 1rem;
 }
